@@ -2,11 +2,11 @@ package com.xxl.job.admin.scheduler.thread;
 
 import com.xxl.job.admin.model.XxlJobInfo;
 import com.xxl.job.admin.scheduler.config.XxlJobAdminBootstrap;
-import com.xxl.job.admin.scheduler.cron.CronExpression;
-import com.xxl.job.admin.scheduler.enums.MisfireStrategyEnum;
-import com.xxl.job.admin.scheduler.enums.ScheduleTypeEnum;
+import com.xxl.job.admin.scheduler.misfire.MisfireStrategyEnum;
+import com.xxl.job.admin.scheduler.type.ScheduleTypeEnum;
 import com.xxl.job.admin.scheduler.trigger.TriggerTypeEnum;
 import com.xxl.tool.core.CollectionTool;
+import com.xxl.tool.core.MapTool;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.transaction.TransactionStatus;
@@ -29,7 +29,7 @@ public class JobScheduleHelper {
     private Thread ringThread;
     private volatile boolean scheduleThreadToStop = false;
     private volatile boolean ringThreadToStop = false;
-    private volatile static Map<Integer, List<Integer>> ringData = new ConcurrentHashMap<>();
+    private final Map<Integer, List<Integer>> ringData = new ConcurrentHashMap<>();
 
     /**
      * start
@@ -51,8 +51,8 @@ public class JobScheduleHelper {
                 }
                 logger.info(">>>>>>>>> init xxl-job admin scheduler success.");
 
-                // pre-read count: treadpool-size * trigger-qps (each trigger cost 50ms, qps = 1000/50 = 20)
-                int preReadCount = (XxlJobAdminBootstrap.getInstance().getTriggerPoolFastMax() + XxlJobAdminBootstrap.getInstance().getTriggerPoolSlowMax()) * 20;
+                // pre-read count: treadpool-size * trigger-qps (each trigger cost 100ms, qps = 1000/100 = 100)
+                int preReadCount = (XxlJobAdminBootstrap.getInstance().getTriggerPoolFastMax() + XxlJobAdminBootstrap.getInstance().getTriggerPoolSlowMax()) * 10;
 
                 // do schedule
                 while (!scheduleThreadToStop) {
@@ -78,28 +78,23 @@ public class JobScheduleHelper {
                                 // time-ring jump
                                 if (nowTime > jobInfo.getTriggerNextTime() + PRE_READ_MS) {
                                     // 2.1、trigger-expire > 5s：pass && make next-trigger-time
-                                    logger.warn(">>>>>>>>>>> xxl-job, schedule misfire, jobId = " + jobInfo.getId());
 
-                                    // 1、misfire match
+                                    // 1、misfire handle
                                     MisfireStrategyEnum misfireStrategyEnum = MisfireStrategyEnum.match(jobInfo.getMisfireStrategy(), MisfireStrategyEnum.DO_NOTHING);
-                                    if (MisfireStrategyEnum.FIRE_ONCE_NOW == misfireStrategyEnum) {
-                                        // FIRE_ONCE_NOW 》 trigger
-                                        XxlJobAdminBootstrap.getInstance().getJobTriggerPoolHelper().trigger(jobInfo.getId(), TriggerTypeEnum.MISFIRE, -1, null, null, null);
-                                        logger.debug(">>>>>>>>>>> xxl-job, schedule push trigger : jobId = " + jobInfo.getId() );
-                                    }
+                                    misfireStrategyEnum.getMisfireHandler().handle(jobInfo.getId());
 
                                     // 2、fresh next
-                                    refreshNextValidTime(jobInfo, new Date());
+                                    refreshNextTriggerTime(jobInfo, new Date());
 
                                 } else if (nowTime > jobInfo.getTriggerNextTime()) {
                                     // 2.2、trigger-expire < 5s：direct-trigger && make next-trigger-time
 
-                                    // 1、trigger
+                                    // 1、trigger direct
                                     XxlJobAdminBootstrap.getInstance().getJobTriggerPoolHelper().trigger(jobInfo.getId(), TriggerTypeEnum.CRON, -1, null, null, null);
-                                    logger.debug(">>>>>>>>>>> xxl-job, schedule push trigger : jobId = " + jobInfo.getId() );
+                                    logger.debug(">>>>>>>>>>> xxl-job, schedule expire, direct trigger : jobId = " + jobInfo.getId() );
 
                                     // 2、fresh next
-                                    refreshNextValidTime(jobInfo, new Date());
+                                    refreshNextTriggerTime(jobInfo, new Date());
 
                                     // next-trigger-time in 5s, pre-read again
                                     if (jobInfo.getTriggerStatus()==1 && nowTime + PRE_READ_MS > jobInfo.getTriggerNextTime()) {
@@ -107,11 +102,12 @@ public class JobScheduleHelper {
                                         // 1、make ring second
                                         int ringSecond = (int)((jobInfo.getTriggerNextTime()/1000)%60);
 
-                                        // 2、push time ring
+                                        // 2、push time ring (pre read)
                                         pushTimeRing(ringSecond, jobInfo.getId());
+                                        logger.debug(">>>>>>>>>>> xxl-job, schedule pre-read, push trigger : jobId = " + jobInfo.getId() );
 
                                         // 3、fresh next
-                                        refreshNextValidTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
+                                        refreshNextTriggerTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
 
                                     }
 
@@ -123,9 +119,10 @@ public class JobScheduleHelper {
 
                                     // 2、push time ring
                                     pushTimeRing(ringSecond, jobInfo.getId());
+                                    logger.debug(">>>>>>>>>>> xxl-job, schedule normal, push trigger : jobId = " + jobInfo.getId() );
 
                                     // 3、fresh next
-                                    refreshNextValidTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
+                                    refreshNextTriggerTime(jobInfo, new Date(jobInfo.getTriggerNextTime()));
 
                                 }
 
@@ -193,17 +190,26 @@ public class JobScheduleHelper {
                     try {
                         // second data
                         List<Integer> ringItemData = new ArrayList<>();
-                        int nowSecond = Calendar.getInstance().get(Calendar.SECOND);   // 避免处理耗时太长，跨过刻度，向前校验一个刻度；
-                        for (int i = 0; i < 2; i++) {
-                            List<Integer> tmpData = ringData.remove( (nowSecond+60-i)%60 );
-                            if (tmpData != null) {
-                                ringItemData.addAll(tmpData);
+
+                        // collect rind data, by second
+                        int nowSecond = Calendar.getInstance().get(Calendar.SECOND);
+                        for (int i = 0; i <= 2; i++) {                                                              // 避免调度遗漏：处理耗时太长、跨过刻度，除当前刻度外 + 向前校验2个刻度；
+                            List<Integer> ringItemList = ringData.remove( (nowSecond+60-i)%60 );
+                            if (CollectionTool.isNotEmpty(ringItemList)) {
+                                // distinct for each second
+                                List<Integer> ringItemListDistinct = ringItemList.stream().distinct().toList();     // 避免调度重复：重复推送时间轮刻度，去重只保留一个；；
+                                if (ringItemListDistinct.size() < ringItemList.size()) {
+                                    logger.warn(">>>>>>>>>>> xxl-job, time-ring found job repeat beat : " + nowSecond + " = " + ringItemData);
+                                }
+
+                                // collect ring item
+                                ringItemData.addAll(ringItemListDistinct);
                             }
                         }
 
                         // ring trigger
-                        logger.debug(">>>>>>>>>>> xxl-job, time-ring beat : " + nowSecond + " = " + Arrays.asList(ringItemData) );
-                        if (ringItemData.size() > 0) {
+                        logger.debug(">>>>>>>>>>> xxl-job, time-ring beat : " + nowSecond + " = " + ringItemData);
+                        if (CollectionTool.isNotEmpty(ringItemData)) {
                             // do trigger
                             for (int jobId: ringItemData) {
                                 // do trigger
@@ -214,7 +220,7 @@ public class JobScheduleHelper {
                         }
                     } catch (Throwable e) {
                         if (!ringThreadToStop) {
-                            logger.error(">>>>>>>>>>> xxl-job, JobScheduleHelper#ringThread error:{}", e);
+                            logger.error(">>>>>>>>>>> xxl-job, JobScheduleHelper#ringThread error:{}", e.getMessage(), e);
                         }
                     }
                 }
@@ -226,15 +232,26 @@ public class JobScheduleHelper {
         ringThread.start();
     }
 
-    private void refreshNextValidTime(XxlJobInfo jobInfo, Date fromTime) {
+    /**
+     * refresh next trigger time of job
+     *
+     * @param jobInfo   job info
+     * @param fromTime  from time
+     */
+    private void refreshNextTriggerTime(XxlJobInfo jobInfo, Date fromTime) {
         try {
-            Date nextValidTime = generateNextValidTime(jobInfo, fromTime);
-            if (nextValidTime != null) {
+            // generate next trigger time
+            ScheduleTypeEnum scheduleTypeEnum = ScheduleTypeEnum.match(jobInfo.getScheduleType(), ScheduleTypeEnum.NONE);
+            Date nextTriggerTime = scheduleTypeEnum.getScheduleType().generateNextTriggerTime(jobInfo, fromTime);
+
+            // refresh next trigger-time + status
+            if (nextTriggerTime != null) {
+                // generate success
                 jobInfo.setTriggerStatus(-1);                               // pass, may be Inaccurate
                 jobInfo.setTriggerLastTime(jobInfo.getTriggerNextTime());
-                jobInfo.setTriggerNextTime(nextValidTime.getTime());
+                jobInfo.setTriggerNextTime(nextTriggerTime.getTime());
             } else {
-                // generateNextValidTime fail, stop job
+                // generate fail, stop job
                 jobInfo.setTriggerStatus(0);
                 jobInfo.setTriggerLastTime(0);
                 jobInfo.setTriggerNextTime(0);
@@ -242,7 +259,7 @@ public class JobScheduleHelper {
                         jobInfo.getId(), jobInfo.getScheduleType(), jobInfo.getScheduleConf());
             }
         } catch (Throwable e) {
-            // generateNextValidTime error, stop job
+            // generate error, stop job
             jobInfo.setTriggerStatus(0);
             jobInfo.setTriggerLastTime(0);
             jobInfo.setTriggerNextTime(0);
@@ -252,16 +269,21 @@ public class JobScheduleHelper {
         }
     }
 
+    /**
+     * push time ring
+     *
+     * @param ringSecond    ring second
+     * @param jobId         job id
+     */
     private void pushTimeRing(int ringSecond, int jobId){
-        // push async ring
-        List<Integer> ringItemData = ringData.get(ringSecond);
-        if (ringItemData == null) {
-            ringItemData = new ArrayList<Integer>();
-            ringData.put(ringSecond, ringItemData);
-        }
-        ringItemData.add(jobId);
+        // get ringItemData, init when not exists
+        List<Integer> ringItemList = ringData.computeIfAbsent(
+                ringSecond,
+                k -> new ArrayList<>());
 
-        logger.debug(">>>>>>>>>>> xxl-job, schedule push time-ring : " + ringSecond + " = " + Arrays.asList(ringItemData) );
+        // push async rind
+        ringItemList.add(jobId);
+        logger.debug(">>>>>>>>>>> xxl-job, schedule push time-ring : " + ringSecond + " = " + List.of(ringItemList));
     }
 
     /**
@@ -288,10 +310,10 @@ public class JobScheduleHelper {
 
         // if has ring data
         boolean hasRingData = false;
-        if (!ringData.isEmpty()) {
+        if (MapTool.isNotEmpty(ringData)) {
             for (int second : ringData.keySet()) {
-                List<Integer> tmpData = ringData.get(second);
-                if (tmpData!=null && tmpData.size()>0) {
+                List<Integer> ringItemList = ringData.get(second);
+                if (CollectionTool.isNotEmpty(ringItemList)) {
                     hasRingData = true;
                     break;
                 }
@@ -323,23 +345,6 @@ public class JobScheduleHelper {
         }
 
         logger.info(">>>>>>>>>>> xxl-job, JobScheduleHelper stop");
-    }
-
-
-    // ---------------------- tools ----------------------
-
-    /**
-     * generate next valid time
-     */
-    public static Date generateNextValidTime(XxlJobInfo jobInfo, Date fromTime) throws Exception {
-        ScheduleTypeEnum scheduleTypeEnum = ScheduleTypeEnum.match(jobInfo.getScheduleType(), null);
-        if (ScheduleTypeEnum.CRON == scheduleTypeEnum) {
-            Date nextValidTime = new CronExpression(jobInfo.getScheduleConf()).getNextValidTimeAfter(fromTime);
-            return nextValidTime;
-        } else if (ScheduleTypeEnum.FIX_RATE == scheduleTypeEnum /*|| ScheduleTypeEnum.FIX_DELAY == scheduleTypeEnum*/) {
-            return new Date(fromTime.getTime() + Long.parseLong(jobInfo.getScheduleConf()) * 1000L);
-        }
-        return null;
     }
 
 }
